Fix overflow issues with project committee shortcode (#448)

--- a/less/components/program-committee.less
+++ b/less/components/program-committee.less
@@ -17,18 +17,14 @@ section#program-committee {
     position: absolute;
     background-size: cover;
     height: 350px;
-    width: 100vw;
-    margin-left: -15px;
-    margin-right: -15px;
+    width: 100%;
   }
   .program-committee-background {
     background: url(/images/host-banner.jpg) no-repeat center top;
     position: absolute;
     background-size: cover;
     height: 500px;
-    width: 100vw;
-    margin-left: -15px;
-    margin-right: -15px;
+    width: 100%;
   }
   .eclipsefdn-user-display-heading h2 {
     color: @brand-primary;
